Revert "[improve][ci] Fixes #23079: Checkstyle checks applied to all test (#24492)"
This reverts commit 13e0a7b89c64bb516d66a48b0da5ede3cff0d8e2.